add swagger and update services apis
